Proper file types.

--- a/Driver.ipynb
+++ b/Driver.ipynb
@@ -17,7 +17,10 @@
    "id": "e9ebf5ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "YEARS = [2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019]\n",
+    "CENSUS_API_KEY = \"your_api_key_here\"\n"
+   ]
   }
  ],
  "metadata": {
