--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -2,30 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a016c53f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "from Data_getter import data_getter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e9ebf5ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "YEARS = [2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019]\n",
-    "CENSUS_API_KEY = \"your_api_key_here\"\n"
+    "YEARS = [2015]\n",
+    "CENSUS_API_KEY = os.getenv(\"CENSUS_API_KEY\")\n",
+    "\n",
+    "for year in YEARS:\n",
+    "    data_getter(year, CENSUS_API_KEY, variables=[\"Population\", \"StormDamage\"])"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Pyt",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
