modified:   Demo.ipynb

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e9ebf5ac",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "CENSUS_API_KEY = os.getenv(\"CENSUS_API_KEY\")\n",
     "\n",
     "for year in YEARS:\n",
-    "    data_getter(year, CENSUS_API_KEY, variables=[\"Population\", \"StormDamage\"])"
+    "    data_getter(year, CENSUS_API_KEY, variables=[\"Population_var\", \"StormDamage_var\"])"
    ]
   }
  ],
