Implemented Median income and house age.

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e9ebf5ac",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,11 @@
     "CENSUS_API_KEY = os.getenv(\"CENSUS_API_KEY\")\n",
     "\n",
     "for year in YEARS:\n",
-    "    data_getter(year, CENSUS_API_KEY, variables=[\"Population_var\", \"StormDamage_var\"])"
+    "    data_getter(\n",
+    "        year, \n",
+    "        CENSUS_API_KEY, \n",
+    "        variables=[\"Population_var\", \"StormDamage_var\", \"MedianIncome_var\", \"HouseAge_var\"]\n",
+    "    )"
    ]
   }
  ],
