Implemented watershed and shoreline county data getter.

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e9ebf5ac",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,9 @@
     "    data_getter(\n",
     "        year, \n",
     "        CENSUS_API_KEY, \n",
-    "        variables=[\"Population_var\", \"StormDamage_var\", \"MedianIncome_var\", \"HouseAge_var\"]\n",
+    "        variables=[\"Population_var\", \"StormDamage_var\",\n",
+    "                    \"MedianIncome_var\", \"HouseAge_var\",\n",
+    "                    \"ShorelineCounties_var\", \"WatershedCounties_var\"]\n",
     "    )"
    ]
   }
